Fix color contrast

--- a/style.css
+++ b/style.css
@@ -395,7 +395,6 @@ button {
     border: 1px solid #dfdfe0;
     background-color: #fff;
     border-radius: 4px;
-    color: #7d7c84;
     resize: none;
   }
 
@@ -778,7 +777,6 @@ button {
     border: 1px solid #dfdfe0;
     background-color: #fff;
     border-radius: 4px;
-    color: #7d7c84;
     resize: none;
   }
 
@@ -1436,7 +1434,6 @@ button {
     border: 1px solid #dfdfe0;
     background-color: #fff;
     border-radius: 4px;
-    /* color: #7d7c84; */
     resize: none;
   }
 
